[gd_scene load_steps=29 format=3 uid="uid://bj5wvpg0qvo87"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_wr68k"]
[ext_resource type="Script" uid="uid://dplpvwsjy03gm" path="res://addons/CustomControls/Dialogs/CommandEvents/manage_camera_targets_dialog.gd" id="2_wr68k"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="3_6hcv8"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_apjl2"]
[ext_resource type="PackedScene" uid="uid://m1iixxkyrur5" path="res://addons/CustomControls/custom_simple_item_list.tscn" id="4_j3rg0"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="5_63ahe"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="6_xa8q0"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="7_jpkee"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="8_bktm0"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u11f1"]

[sub_resource type="Gradient" id="Gradient_u5yrp"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6yyp3"]
gradient = SubResource("Gradient_u5yrp")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_apjl2"]
atlas = ExtResource("3_6hcv8")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ahe"]
atlas = ExtResource("3_6hcv8")
region = Rect2(216, 0, 24, 24)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa8q0"]
resource_local_to_scene = true
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.113725, 0.133333, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpkee"]
resource_local_to_scene = true
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Gradient" id="Gradient_bktm0"]
offsets = PackedFloat32Array(0, 0.369535, 1)
colors = PackedColorArray(0.0484924, 0.454508, 0.886719, 1, 0.0403748, 0.296637, 0.738281, 1, 0.0518364, 0.4513, 0.876835, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j11wx"]
gradient = SubResource("Gradient_bktm0")
fill_from = Vector2(0.547009, 1)
fill_to = Vector2(0.559829, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dkdyo"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_j11wx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oxkw2"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_j11wx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qiqap"]
texture = ExtResource("5_63ahe")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7qdgr"]
texture = ExtResource("6_xa8q0")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjylh"]
texture = ExtResource("7_jpkee")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_subod"]
texture = ExtResource("8_bktm0")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfo07"]
texture = ExtResource("5_63ahe")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sujn"]
texture = ExtResource("6_xa8q0")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5stfh"]
texture = ExtResource("7_jpkee")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maa40"]
texture = ExtResource("8_bktm0")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ManageCameraTargetsDialog" type="Window"]
title = "Manage Camera Targets"
position = Vector2i(0, 36)
size = Vector2i(580, 480)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_wr68k")
script = ExtResource("2_wr68k")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_u11f1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6yyp3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_vertical = 0
text = "Camera Targets:"
vertical_alignment = 1

[node name="Info" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "[title]Targets[/title]
Add multiple targets for the camera to follow simultaneously. Each target has a priority value that determines its influence on camera positioning.

- Higher priority = more camera focus
- Camera automatically zooms to fit all targets

To select multiple targets, you can hold down Control or Shift and click to select more than one target."
mouse_default_cursor_shape = 16
texture_normal = SubResource("AtlasTexture_apjl2")
texture_hover = SubResource("AtlasTexture_63ahe")

[node name="TargetList" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_j3rg0")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = -1
theme_override_styles/focus = SubResource("StyleBoxFlat_xa8q0")
theme_override_styles/panel = SubResource("StyleBoxFlat_xa8q0")
theme_override_styles/hovered = SubResource("StyleBoxFlat_jpkee")
theme_override_styles/selected = SubResource("StyleBoxTexture_dkdyo")
theme_override_styles/selected_focus = SubResource("StyleBoxTexture_oxkw2")
select_mode = 1
item_count = 1
item_0/text = "Player"
odd_line_color = Color(0.172549, 0.184314, 0.192157, 1)
event_line_color = Color(0.145098, 0.156863, 0.164706, 1)

[node name="Priority" type="SpinBox" parent="MarginContainer/VBoxContainer/TargetList"]
unique_name_in_owner = true
visible = false
z_index = 10
z_as_relative = false
custom_minimum_size = Vector2(160, 0)
layout_mode = 0
offset_left = -12.0
offset_top = -40.0
offset_right = 148.0
offset_bottom = -9.0
tooltip_text = "Priority to be given to this character by the camera for tracking purposes"
allow_greater = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_apjl2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_apjl2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_hfo07")
theme_override_styles/hover = SubResource("StyleBoxTexture_4sujn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5stfh")
theme_override_styles/normal = SubResource("StyleBoxTexture_maa40")
text = "CANCEL"

[connection signal="gui_input" from="MarginContainer/VBoxContainer/TargetList" to="." method="_on_target_list_gui_input"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/TargetList" to="." method="_on_target_list_mouse_exited"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TargetList/Priority" to="." method="_on_priority_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
